--- a/index.html
+++ b/index.html
@@ -1,199 +1,248 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>For You 💖</title>
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
-  <style>
-    /* Reset */
-    *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
-    :root{--bg1:#000;--bg2:#1a0010;--accent:#ff9fc7;}
-    body.rose{--bg1:#2b0014;--bg2:#7a0036;--accent:#ffd1dc;}
-    body{height:100vh;overflow:hidden;background:radial-gradient(circle at top,var(--bg2),var(--bg1));color:white;transition:background 0.8s ease;}
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Valentine 💖</title>
 
-    /* Slides */
-    .slide{position:absolute;top:0;left:0;width:100%;height:100%;display:none;align-items:center;justify-content:center;text-align:center;padding:30px;}
-    .slide.active{display:flex;}
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
-    .card{background: rgba(255,255,255,0.08);backdrop-filter: blur(22px);border-radius:34px;padding:46px 36px;max-width:430px;width:90%;box-shadow:0 40px 100px rgba(255,180,120,0.25);}
-    h1{font-size:2.3rem;margin-bottom:15px;background:linear-gradient(45deg,#ffd700,#ff9fc7);-webkit-background-clip:text;-webkit-text-fill-color:transparent;animation:glow 2.5s ease-in-out infinite alternate;}
-    @keyframes glow{0%{text-shadow:0 0 8px #ffd700;}100%{text-shadow:0 0 24px #ff9fc7;}}
-    p{font-size:1.15rem;opacity:0.9;margin-bottom:22px;}
+<style>
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Segoe UI', sans-serif;
+}
 
-    button{background:linear-gradient(45deg,#ffd700,#ff4f9a);border:none;color:white;padding:15px 36px;border-radius:50px;font-size:1rem;cursor:pointer;box-shadow:0 18px 45px rgba(255,215,0,0.45);transition: transform 0.2s ease, box-shadow 0.2s ease;position:relative;}
-    button:hover{transform:scale(1.08);box-shadow:0 20px 60px rgba(255,215,0,0.55);}
-    /* Button glow pulse */
-    button::after{ content:''; position:absolute; top:-6px; left:-6px; right:-6px; bottom:-6px; border-radius:50px; box-shadow:0 0 20px rgba(255,215,0,0.6),0 0 40px rgba(255,159,199,0.4); opacity:0; transition:opacity 0.3s ease; }
-    button:hover::after{ opacity:1; animation:pulse 1s infinite; }
-    @keyframes pulse{ 0%{transform:scale(1);opacity:0.6;} 50%{transform:scale(1.1);opacity:1;} 100%{transform:scale(1);opacity:0.6;} }
+body {
+  background: radial-gradient(circle at top, #3a001a, #000);
+  height: 100vh;
+  overflow: hidden;
+  color: white;
+}
 
-    .btn-group{display:flex;gap:15px;justify-content:center;flex-wrap:wrap;}
-    .toggle{margin-top:15px;font-size:0.95rem;opacity:0.8;cursor:pointer;}
-    .countdown{font-size:1.15rem;letter-spacing:1px;margin-bottom:25px;color:var(--accent);}
+/* SLIDES */
+.slide {
+  display: none;
+  height: 100vh;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
 
-    /* Hearts */
-    .heart{position:absolute;bottom:-40px;font-size:22px;animation:rise linear infinite;opacity:0.85;z-index:1;}
-    @keyframes rise{0%{transform:translateY(0) scale(1);opacity:0}15%{opacity:1}100%{transform:translateY(-120vh) scale(1.6);opacity:0;}}
+.slide.active {
+  display: flex;
+}
 
-    /* Glitter */
-    .glitter{position:fixed;width:10px;height:10px;background:radial-gradient(circle,#ffd700,rgba(255,215,0,0.05));border-radius:50%;pointer-events:none;animation:sparkle 1.2s linear forwards;z-index:1;}
-    @keyframes sparkle{0%{transform:scale(1);opacity:1}100%{transform:scale(0);opacity:0}}
-  </style>
+/* CARD */
+.card {
+  background: rgba(255,255,255,0.12);
+  backdrop-filter: blur(12px);
+  border-radius: 30px;
+  padding: 50px;
+  max-width: 420px;
+  width: 90%;
+  text-align: center;
+  box-shadow: 0 0 40px rgba(255,215,0,0.2);
+}
+
+h1 {
+  color: gold;
+  margin-bottom: 15px;
+}
+
+p {
+  margin-bottom: 25px;
+  font-size: 18px;
+}
+
+/* BUTTONS */
+button {
+  padding: 14px 32px;
+  border-radius: 40px;
+  border: none;
+  background: linear-gradient(45deg, gold, hotpink);
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  position: relative;
+}
+
+button:hover {
+  transform: scale(1.05);
+}
+
+/* GLOW */
+button::after {
+  content: '';
+  position: absolute;
+  inset: -8px;
+  border-radius: 50px;
+  box-shadow: 0 0 25px gold, 0 0 50px hotpink;
+  opacity: 0;
+  transition: opacity .3s;
+}
+
+button:hover::after {
+  opacity: 1;
+}
+
+/* HEARTS */
+.heart {
+  position: fixed;
+  bottom: -30px;
+  font-size: 22px;
+  animation: float 6s linear forwards;
+  pointer-events: none;
+}
+
+@keyframes float {
+  0% { transform: translateY(0); opacity: 0 }
+  20% { opacity: 1 }
+  100% { transform: translateY(-120vh); opacity: 0 }
+}
+
+/* GLITTER */
+.glitter {
+  position: fixed;
+  width: 8px;
+  height: 8px;
+  background: gold;
+  border-radius: 50%;
+  pointer-events: none;
+  opacity: .8;
+}
+
+/* COUNTDOWN */
+.countdown {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+</style>
 </head>
+
 <body>
-  <!-- Slides -->
-  <div class="slide active">
-    <div class="card">
-      <h1>MiMi 💖</h1>
-      <p>A little something for the prettiest girl ✨</p>
-      <button id="btn-begin">Begin 💫</button>
-    </div>
+
+<!-- SLIDES -->
+<div class="slide active">
+  <div class="card">
+    <h1>MiMi 💖</h1>
+    <p>This is made just for you</p>
+    <button id="begin">Begin</button>
   </div>
+</div>
 
-  <div class="slide">
-    <div class="card">
-      <h1>Main Character Energy</h1>
-      <p>You don’t try — you just shine 💎</p>
-      <button id="btn-next1">Next 😌</button>
-    </div>
+<div class="slide">
+  <div class="card">
+    <h1>Main Character ✨</h1>
+    <p>You don’t compete. You dominate.</p>
+    <button class="next">Next</button>
   </div>
+</div>
 
-  <div class="slide">
-    <div class="card">
-      <h1>Countdown to Valentine’s 💕</h1>
-      <div id="countdown" class="countdown"></div>
-      <button id="btn-next2">Tell Me 👀</button>
-    </div>
+<div class="slide">
+  <div class="card">
+    <h1>Valentine Countdown 💕</h1>
+    <div id="countdown" class="countdown"></div>
+    <button class="next">Next</button>
   </div>
+</div>
 
-  <div class="slide">
-    <div class="card">
-      <h1>So… 💘</h1>
-      <p>Will you be my Valentine?</p>
-      <div class="btn-group">
-        <button id="btn-yes">YES 💖</button>
-        <button id="btn-not no">NOT NO 😈</button>
-      </div>
-    </div>
+<div class="slide">
+  <div class="card">
+    <h1>One Question 💘</h1>
+    <p>Will you be my Valentine?</p>
+    <button id="yes">YES 💖</button>
   </div>
+</div>
 
-  <div class="slide">
-    <div class="card">
-      <h1>👑 QUEEN OF MY WORLD 👑</h1>
-      <p>You’re adored, celebrated, and chosen. Forever loved.</p>
-      <button id="btn-share">Share This Moment 📲</button>
-      <div class="toggle" id="btn-toggle">Switch Mood 🌙</div>
-    </div>
+<div class="slide">
+  <div class="card">
+    <h1>👑 Chosen 👑</h1>
+    <p>You’re always on top of the world.</p>
+    <button id="share">Share</button>
   </div>
+</div>
 
-  <script>
-    document.addEventListenerdocument.addEventListener("DOMContentLoaded", function(){
-  let current = 0;
-  const slides = document.querySelectorAll('.slide');
+<script>
+document.addEventListener("DOMContentLoaded", () => {
 
-  function showSlide(index){
-    if(index < 0 || index >= slides.length) return;
-    slides[current].classList.remove('active');
-    current = index;
-    slides[current].classList.add('active');
+  const slides = document.querySelectorAll(".slide");
+  let index = 0;
+
+  function show(i) {
+    slides.forEach(s => s.classList.remove("active"));
+    slides[i].classList.add("active");
   }
 
-  function nextSlide(){
-    if(current < slides.length - 1){
-      showSlide(current + 1);
-    }
-  }
+  document.getElementById("begin").onclick = () => {
+    index = 1;
+    show(index);
+  };
 
-  function finale(){
-    nextSlide();
-    confetti({
-      particleCount: 400,
-      spread: 180,
-      origin: { y: 0.6 },
-      colors: ['#ffd700','#ff4f9a','#ffb6c1']
-    });
-    for(let i = 0; i < 60; i++) createHeart();
-  }
+  document.querySelectorAll(".next").forEach(btn => {
+    btn.onclick = () => {
+      index++;
+      show(index);
+    };
+  });
 
-  function createHeart(){
-    const heart = document.createElement('div');
-    heart.className = 'heart';
-    heart.innerHTML = '💖';
-    heart.style.left = Math.random() * 100 + 'vw';
-    heart.style.animationDuration = (Math.random() * 3 + 3) + 's';
-    heart.style.fontSize = (18 + Math.random() * 14) + 'px';
-    document.body.appendChild(heart);
-    setTimeout(() => heart.remove(), 6000);
-  }
+  document.getElementById("yes").onclick = () => {
+    index++;
+    show(index);
+    confetti({ particleCount: 350, spread: 160 });
+  };
 
-  // Heart rain interval
-  setInterval(createHeart, 800);
-
-  // Countdown
-  const countdownEl = document.getElementById('countdown');
-  // Valentine date this year (assumes Feb 14)
-  const valentines = new Date(new Date().getFullYear(), 1, 14).getTime();
-
-  function updateCountdown(){
-    const now = Date.now();
-    const diff = valentines - now;
-    // If already past, show 0d 0h 0m
-    const d = Math.max(0, Math.floor(diff / 86400000));
-    const h = Math.max(0, Math.floor((diff / 3600000) % 24));
-    const m = Math.max(0, Math.floor((diff / 60000) % 60));
-    countdownEl.textContent = d + 'd ' + h + 'h ' + m + 'm until Valentine’s 💘';
-  }
-  updateCountdown();
-  setInterval(updateCountdown, 1000);
-
-  // Buttons
-  document.getElementById("btn-begin").addEventListener("click", nextSlide);
-  document.getElementById("btn-next1").addEventListener("click", nextSlide);
-  document.getElementById("btn-next2").addEventListener("click", nextSlide);
-
-  document.getElementById("btn-yes").addEventListener("click", finale);
-  document.getElementById("btn-absolutely").addEventListener("click", finale);
-
-  document.getElementById("btn-share").addEventListener("click", function(){
-    if(navigator.share){
+  document.getElementById("share").onclick = () => {
+    if (navigator.share) {
       navigator.share({
-        title: 'Valentine 💖',
-        text: 'Someone made this just for me 👑✨',
+        title: "Valentine 💖",
+        text: "Someone made this for me",
         url: location.href
-      }).catch(() => { /* ignore */ });
+      });
     } else {
-      navigator.clipboard?.writeText(location.href).catch(() => {});
-      alert('Link copied! Share the love 💕');
+      alert("Copy the link and share 💕");
     }
+  };
+
+  /* COUNTDOWN */
+  const cd = document.getElementById("countdown");
+  const target = new Date(new Date().getFullYear(), 1, 14).getTime();
+
+  setInterval(() => {
+    const diff = target - Date.now();
+    const d = Math.floor(diff / 86400000);
+    const h = Math.floor(diff % 86400000 / 3600000);
+    const m = Math.floor(diff % 3600000 / 60000);
+    cd.textContent = d + "d " + h + "h " + m + "m";
+  }, 1000);
+
+  /* HEARTS */
+  setInterval(() => {
+    const h = document.createElement("div");
+    h.className = "heart";
+    h.textContent = "💖";
+    h.style.left = Math.random() * 100 + "vw";
+    document.body.appendChild(h);
+    setTimeout(() => h.remove(), 6000);
+  }, 700);
+
+  /* GLITTER */
+  document.addEventListener("mousemove", e => {
+    const g = document.createElement("div");
+    g.className = "glitter";
+    g.style.left = e.clientX + "px";
+    g.style.top = e.clientY + "px";
+    document.body.appendChild(g);
+    setTimeout(() => g.remove(), 250);
   });
 
-  document.getElementById("btn-toggle").addEventListener("click", () => document.body.classList.toggle('rose'));
-
-  // Swipe support
-  let startY = 0;
-  document.addEventListener('touchstart', e => startY = e.touches[0].clientY);
-  document.addEventListener('touchend', e => {
-    const endY = e.changedTouches[0].clientY;
-    if(startY - endY > 50 && current < slides.length - 1){
-      nextSlide();
-    }
-  });
-
-  // Glitter trail on move
-  function sparkle(e){
-    const glitter = document.createElement('div');
-    glitter.className = 'glitter';
-    glitter.style.left = e.clientX + 'px';
-    glitter.style.top = e.clientY + 'px';
-    glitter.style.width = (5 + Math.random() * 10) + 'px';
-    glitter.style.height = (5 + Math.random() * 10) + 'px';
-    document.body.appendChild(glitter);
-    setTimeout(() => glitter.remove(), 1200);
-  }
-  document.addEventListener('mousemove', sparkle);
-  document.addEventListener('touchmove', e => sparkle(e.touches[0]));
 });
-  </script>
+</script>
+
 </body>
 </html>
