--- a/index.html
+++ b/index.html
@@ -1,95 +1,269 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Valentine</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+<title>MiMi 💖 Important Question</title>
+
+<!-- Confetti -->
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 
 <style>
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-  background: #0a0a0a;
-  color: white;
+:root{
+  --pink1:#ffd1e8;
+  --pink2:#fff0f7;
+  --card:#ffffffdd;
+  --yes:#ff2f7b;
+  --yesHover:#ff145f;
 }
 
-.slide {
-  display: none;
-  height: 100vh;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+*{box-sizing:border-box}
+
+body{
+  margin:0;
+  min-height:100svh;
+  display:grid;
+  place-items:center;
+  background:radial-gradient(circle at top,var(--pink2),var(--pink1));
+  font-family:system-ui,-apple-system,BlinkMacSystemFont,sans-serif;
+  overflow:hidden;
+  padding:14px;
 }
 
-.slide.active {
-  display: flex;
+canvas{
+  position:fixed;
+  inset:0;
+  pointer-events:none;
+  z-index:999;
 }
 
-.card {
-  background: rgba(255,255,255,0.08);
-  padding: 40px;
-  border-radius: 20px;
-  max-width: 400px;
+.card{
+  width:min(720px,96vw);
+  padding:28px 22px 32px;
+  background:var(--card);
+  backdrop-filter:blur(12px);
+  border-radius:26px;
+  text-align:center;
+  box-shadow:0 30px 80px rgba(0,0,0,.18);
 }
 
-button {
-  margin-top: 20px;
-  padding: 14px 30px;
-  font-size: 16px;
-  border-radius: 30px;
-  border: none;
-  cursor: pointer;
+h1{
+  font-size:clamp(26px,4.5vw,48px);
+  margin:8px 0;
 }
+
+p{
+  font-size:16px;
+  opacity:.8;
+  margin-bottom:22px;
+}
+
+.zone{
+  position:relative;
+  width:min(520px,100%);
+  height:170px;
+  margin:0 auto;
+  touch-action:none;
+}
+
+button{
+  position:absolute;
+  top:50%;
+  transform:translateY(-50%);
+  padding:16px 28px;
+  font-size:18px;
+  font-weight:800;
+  border-radius:999px;
+  border:none;
+  cursor:pointer;
+  box-shadow:0 14px 30px rgba(0,0,0,.18);
+  user-select:none;
+  -webkit-tap-highlight-color:transparent;
+  transition:transform .12s ease,background .12s ease;
+}
+
+#yes{
+  left:18%;
+  background:var(--yes);
+  color:#fff;
+}
+
+#yes:hover{background:var(--yesHover)}
+
+#no{
+  left:62%;
+  background:#e5e7eb;
+  color:#111;
+}
+
+.hint{
+  margin-top:12px;
+  font-size:13px;
+  opacity:.65;
+  min-height:18px;
+}
+
+.result{
+  display:none;
+  margin-top:22px;
+  animation:pop .45s ease;
+}
+
+@keyframes pop{
+  from{transform:scale(.92);opacity:0}
+  to{transform:scale(1);opacity:1}
+}
+
+audio{display:none}
 </style>
 </head>
 
 <body>
+<canvas id="confetti"></canvas>
 
-<div class="slide active">
-  <div class="card">
-    <h1>Hey 💖</h1>
-    <p>This is just for you</p>
-    <button onclick="next()">Begin</button>
-  </div>
-</div>
+<audio id="music" loop>
+  <source src="https://assets.mixkit.co/music/preview/mixkit-romantic-piano-loop-779.mp3" type="audio/mpeg">
+</audio>
 
-<div class="slide">
-  <div class="card">
-    <h1>You’re special</h1>
-    <p>I really mean that</p>
-    <button onclick="next()">Next</button>
-  </div>
-</div>
+<main class="card">
+  <h1>MiMi… 🥹💖</h1>
+  <p>
+    After deep thinking, emotional damage,
+    and consulting the universe 🌌  
+    I have exactly ONE question:
+  </p>
 
-<div class="slide">
-  <div class="card">
-    <h1>So…</h1>
-    <p>Will you be my Valentine?</p>
-    <button onclick="next()">Yes 💖</button>
-  </div>
-</div>
+  <h1>Will you be my Valentine?</h1>
 
-<div class="slide">
-  <div class="card">
-    <h1>Chosen 👑</h1>
-    <p>Always.</p>
+  <div class="zone" id="zone">
+    <button id="yes">YES 💘</button>
+    <button id="no">No 🙄</button>
   </div>
-</div>
+
+  <div class="hint" id="hint">
+    ⚠️ The “No” button has commitment issues.
+  </div>
+
+  <div class="result" id="result">
+    <h1>IT WAS ALWAYS YOU 😭❤️</h1>
+    <p>
+      Congratulations MiMi 🎉  
+      You’ve officially locked in:
+      unlimited hugs, snacks,
+      chaos, laughter & love.
+    </p>
+    <h1>💍 Be mine. Always.</h1>
+    <img src="https://media.giphy.com/media/l0MYt5jPR6QX5pnqM/giphy.gif" width="260" alt="celebration">
+  </div>
+</main>
 
 <script>
-let index = 0;
-const slides = document.querySelectorAll('.slide');
+const zone=document.getElementById("zone");
+const yes=document.getElementById("yes");
+const no=document.getElementById("no");
+const result=document.getElementById("result");
+const hint=document.getElementById("hint");
+const canvas=document.getElementById("confetti");
+const music=document.getElementById("music");
 
-function next() {
-  slides[index].classList.remove('active');
-  index++;
-  if (index < slides.length) {
-    slides[index].classList.add('active');
-  }
+const noMessages=[
+  "Nice try 😏",
+  "MiMi… be serious.",
+  "That button is broken 💀",
+  "Emotionally unavailable ❌",
+  "Universe said NO to No 🌌",
+  "Why are you like this 😭"
+];
+
+let noCount=0;
+let yesScale=1;
+
+/* CONFETTI */
+function resizeCanvas(){
+  const dpr=window.devicePixelRatio||1;
+  canvas.width=innerWidth*dpr;
+  canvas.height=innerHeight*dpr;
+  canvas.style.width="100vw";
+  canvas.style.height="100vh";
 }
-</script>
+resizeCanvas();
+addEventListener("resize",resizeCanvas);
 
+const confettiInstance=confetti.create(canvas,{resize:false,useWorker:true});
+
+function celebrate(){
+  const end=Date.now()+1600;
+  (function frame(){
+    confettiInstance({
+      particleCount:10,
+      spread:90,
+      startVelocity:40,
+      origin:{x:Math.random(),y:Math.random()*0.4}
+    });
+    if(Date.now()<end)requestAnimationFrame(frame);
+  })();
+
+  setTimeout(()=>{
+    confettiInstance({
+      particleCount:300,
+      spread:140,
+      startVelocity:60,
+      origin:{x:0.5,y:0.6}
+    });
+  },300);
+}
+
+/* NO BUTTON DODGE */
+function clamp(v,min,max){return Math.max(min,Math.min(max,v))}
+
+function dodge(px,py){
+  const z=zone.getBoundingClientRect();
+  const b=no.getBoundingClientRect();
+
+  let dx=(b.left+b.width/2)-px;
+  let dy=(b.top+b.height/2)-py;
+  let mag=Math.hypot(dx,dy)||1;
+  dx/=mag; dy/=mag;
+
+  no.style.left=clamp((b.left-z.left)+dx*150,0,z.width-b.width)+"px";
+  no.style.top=clamp((b.top-z.top)+dy*150,0,z.height-b.height)+"px";
+  no.style.transform="none";
+
+  yesScale=Math.min(2.6,yesScale+.1);
+  yes.style.transform=`translateY(-50%) scale(${yesScale})`;
+
+  hint.textContent=noMessages[noCount%noMessages.length];
+  noCount++;
+}
+
+zone.addEventListener("pointermove",e=>{
+  const b=no.getBoundingClientRect();
+  const d=Math.hypot(
+    (b.left+b.width/2)-e.clientX,
+    (b.top+b.height/2)-e.clientY
+  );
+  if(d<150)dodge(e.clientX,e.clientY);
+});
+
+no.addEventListener("click",e=>e.preventDefault());
+
+/* YES CLICK */
+yes.addEventListener("click",()=>{
+  music.play().catch(()=>{});
+  zone.style.display="none";
+  hint.style.display="none";
+  result.style.display="block";
+  celebrate();
+});
+
+/* SECRET ENDING – WAIT 10s */
+setTimeout(()=>{
+  if(result.style.display!=="block"){
+    hint.textContent="If you wait long enough… destiny decides 😌";
+  }
+},10000);
+</script>
 </body>
 </html>
+>
 
